win-dshow: Put device id mangling in separate file
This is going to be used for other code as well, so may as well put it
in its own file.

--- a/plugins/win-dshow/CMakeLists.txt
+++ b/plugins/win-dshow/CMakeLists.txt
@@ -4,6 +4,7 @@ find_package(FFMpeg REQUIRED COMPONENTS avcodec avutil)
 include_directories(${FFMPEG_INCLUDE_DIRS})
 
 set(win-dshow_HEADERS
+	encode-dstr.hpp
 	ffmpeg-decode.h)
 
 set(win-dshow_SOURCES
