linux-capture: Add xcb cursor helper library
Add a new helper library to handle the mouse cursor using xcb.
Since porting the old library without either keeping legacy code or
breaking the api would have been non-trivial, this is added as a
completely separate implementation. Once all code is ported over to
use this library, the old one can be removed.

--- a/plugins/linux-capture/CMakeLists.txt
+++ b/plugins/linux-capture/CMakeLists.txt
@@ -20,6 +20,7 @@ include_directories(SYSTEM
 set(linux-capture_SOURCES
 	linux-capture.c
 	xcursor.c
+	xcursor-xcb.c
 	xhelpers.c
 	xshm-input.c
 	xcomposite-main.cpp
@@ -28,6 +29,7 @@ set(linux-capture_SOURCES
 )
 set(linux-capture_HEADERS
 	xcursor.h
+	xcursor-xcb.h
 	xhelpers.h
 	xcompcap-main.hpp
 	xcompcap-helper.hpp
