libobs: Add win32 crash handler
A slightly refactored version of R1CH's crash handler, allows crash
handling for windows which provides stack traces of all threads and a
list of all loaded modules.  Also shows the processor, windows version,
and current libobs version.

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -41,6 +41,7 @@ include_directories(${OBS_JANSSON_INCLUDE_DIRS})
 
 if(WIN32)
 	set(libobs_PLATFORM_SOURCES
+		obs-win-crash-handler.c
 		obs-windows.c
 		util/threading-windows.c
 		util/pipe-windows.c
