UI: Add crash report dialog
This crash report dialog is mostly just for the windows crash handling
code.  If a crash occurs, the user will be able to view the crash report
and post it on the forums or give it to a developer for debugging
purposes.

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -105,6 +105,7 @@ set(obs_SOURCES
 	properties-view.cpp
 	volume-control.cpp
 	adv-audio-control.cpp
+	crash-report.cpp
 	qt-wrappers.cpp)
 
 set(obs_HEADERS
@@ -129,6 +130,7 @@ set(obs_HEADERS
 	volume-control.hpp
 	adv-audio-control.hpp
 	qt-display.hpp
+	crash-report.hpp
 	qt-wrappers.hpp)
 
 set(obs_UI
