Add SOVERSION to libobs-opengl
Because libobs-opengl is a public library, it's customary to have SONAME
embedded in the library file.  Also remove the prefix override and
remove the prefixing "lib" from the output name.  This also requires us
to pass the library file name to dlopen invocations.

--- a/libobs-opengl/CMakeLists.txt
+++ b/libobs-opengl/CMakeLists.txt
@@ -1,6 +1,5 @@
 project(libobs-opengl)
 
-include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/libobs")
 
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIR})
@@ -73,8 +72,10 @@ add_library(libobs-opengl MODULE
 	${libobs-opengl_HEADERS})
 set_target_properties(libobs-opengl
 	PROPERTIES
-		OUTPUT_NAME libobs-opengl
-		PREFIX "")
+		OUTPUT_NAME obs-opengl
+		VERSION 0.0
+		SOVERSION 0
+		)
 target_link_libraries(libobs-opengl
 	libobs
 	glad
