libobs: Add XDG config directory support
Adding XDG Base Directory Specification support for config dir

http://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html

Closes jp9000/obs-studio#348

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,8 +70,15 @@ if(APPLE)
 	set(CMAKE_MACOSX_RPATH TRUE)
 	set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 	list(APPEND CMAKE_INSTALL_RPATH "@loader_path/" "@executable_path/")
-elseif(UNIX AND NOT UNIX_STRUCTURE)
-	list(APPEND CMAKE_INSTALL_RPATH "$ORIGIN")
+elseif(UNIX)
+	option(USE_XDG "Utilize XDG Base Directory Specification" ON)
+	if(USE_XDG)
+		add_definitions(-DUSE_XDG)
+	endif()
+
+	if(NOT UNIX_STRUCTURE)
+		list(APPEND CMAKE_INSTALL_RPATH "$ORIGIN")
+	endif()
 endif()
 
 option(BUILD_TESTS "Build test directory (includes test sources and possibly a platform test executable)" FALSE)
