obs-output: avoid w32-pthreads for mingw-w64
mingw-w64 provides its own pthreads library.

Also, change link libs as mingw-w64 libraries are not postfixed .lib

--- a/plugins/obs-outputs/CMakeLists.txt
+++ b/plugins/obs-outputs/CMakeLists.txt
@@ -2,9 +2,14 @@ project(obs-outputs)
 
 if(WIN32)
 	set(obs-outputs_PLATFORM_DEPS
-		w32-pthreads
-		ws2_32.lib
-		winmm.lib)
+		ws2_32
+		winmm)
+endif()
+
+if(MSVC)
+	set(obs-outputs_PLATFORM_DEPS
+		${obs-outputs_PLATFORM_DEPS}
+		w32-pthreads)
 endif()
 
 set(obs-outputs_librtmp_HEADERS
