Generate proper DL_OPENGL value
Since we rely on the dynamic linker to find the library for us via
dlopen(), we need to have DL_OPENGL be .so.N, not the full library
filename, as ldconfig doesn't cache the full filename

Use of TARGET_SONAME_FILE requires the library to be marked as SHARED,
not MODULE

--- a/libobs-opengl/CMakeLists.txt
+++ b/libobs-opengl/CMakeLists.txt
@@ -67,7 +67,7 @@ set(libobs-opengl_HEADERS
 	gl-shaderparser.h
 	gl-subsystem.h)
 
-add_library(libobs-opengl MODULE
+add_library(libobs-opengl SHARED
 	${libobs-opengl_SOURCES}
 	${libobs-opengl_HEADERS})
 
