--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -13,6 +13,7 @@ elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
 	add_subdirectory(linux-pulseaudio)
 	add_subdirectory(linux-v4l2)
 	add_subdirectory(linux-jack)
+	add_subdirectory(decklink/linux)
 endif()
 
 add_subdirectory(image-source)
