--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -3,6 +3,7 @@ if(WIN32)
 	add_subdirectory(win-wasapi)
 	add_subdirectory(win-dshow)
 	add_subdirectory(win-capture)
+	add_subdirectory(decklink/win)
 elseif(APPLE)
 	add_subdirectory(mac-avcapture)
 	add_subdirectory(mac-capture)
