Add CMake module to parse IDL files on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ if(MSVC)
 	endif()
 else()
 	if(MINGW)
+		set(CMAKE_WIDL "widl" CACHE STRING "wine IDL header file generation program")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_WIN32_WINNT=0x0600 -DWINVER=0x0600")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_WIN32_WINNT=0x0600 -DWINVER=0x0600")
 	endif()
