UI: Add 'visibility' checkbox
This checkbox gives an 'eye' icon that indicates whether something is
visible or not.  The color of the icon is influenced by the current
style's foreground color.

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -107,6 +107,7 @@ set(obs_SOURCES
 	double-slider.cpp
 	volume-control.cpp
 	adv-audio-control.cpp
+	visibility-checkbox.cpp
 	vertical-scroll-area.cpp
 	source-list-widget.cpp
 	crash-report.cpp
@@ -135,6 +136,7 @@ set(obs_HEADERS
 	double-slider.hpp
 	volume-control.hpp
 	adv-audio-control.hpp
+	visibility-checkbox.hpp
 	vertical-scroll-area.hpp
 	source-list-widget.hpp
 	qt-display.hpp
