--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -22,5 +22,6 @@ add_subdirectory(obs-x264)
 add_subdirectory(obs-libfdk)
 add_subdirectory(obs-ffmpeg)
 add_subdirectory(obs-outputs)
+add_subdirectory(obs-filters)
 add_subdirectory(rtmp-services)
 add_subdirectory(text-freetype2)
