obs-filters: Add mask/blend filter
This filter allows the ability to use a texture to modify the video
output of a source, the ability to:
- apply a color-based mask (dark = transparent, light = opaque)
- apply a mask based upon the alpha of an image
- blend an image via subtraction, addition, or multiplication

--- a/plugins/obs-filters/CMakeLists.txt
+++ b/plugins/obs-filters/CMakeLists.txt
@@ -2,7 +2,8 @@ project(obs-filters)
 
 set(obs-filters_SOURCES
 	obs-filters.c
-	async-delay-filter.c)
+	async-delay-filter.c
+	mask-filter.c)
 
 add_library(obs-filters MODULE
 	${obs-filters_SOURCES})
