obs-filters: Add crop filter
Allows any source to be cropped, though note that this renders to
texture first, so for more optimal results, cropping values should
probably be put in to capture sources that can be cropped as they're
actually rendered by the source.

--- a/plugins/obs-filters/CMakeLists.txt
+++ b/plugins/obs-filters/CMakeLists.txt
@@ -3,6 +3,7 @@ project(obs-filters)
 set(obs-filters_SOURCES
 	obs-filters.c
 	async-delay-filter.c
+	crop-filter.c
 	mask-filter.c)
 
 add_library(obs-filters MODULE
