obs-filters: Add color correction filter
Adds a color correction filter if one wishes to just apply
gamma/constrast/brightness/opacity/color to a source.

--- a/plugins/obs-filters/CMakeLists.txt
+++ b/plugins/obs-filters/CMakeLists.txt
@@ -2,6 +2,7 @@ project(obs-filters)
 
 set(obs-filters_SOURCES
 	obs-filters.c
+	color-filter.c
 	async-delay-filter.c
 	crop-filter.c
 	mask-filter.c)
