obs-filters: Add chroma key filter
This allows applying a mask based upon the chroma value (U/V) of a
specific color in YUV color space.  Commonly used to mask out
greenscreens and bluescreens in live video.

--- a/plugins/obs-filters/CMakeLists.txt
+++ b/plugins/obs-filters/CMakeLists.txt
@@ -5,6 +5,7 @@ set(obs-filters_SOURCES
 	color-filter.c
 	async-delay-filter.c
 	crop-filter.c
+	chroma-key-filter.c
 	mask-filter.c)
 
 add_library(obs-filters MODULE
