obs-filters: Add color key filter
Masks out a specific color range in RGB color space.  Commonly used with
solid image data or animated video rather than live video.

--- a/plugins/obs-filters/CMakeLists.txt
+++ b/plugins/obs-filters/CMakeLists.txt
@@ -6,6 +6,7 @@ set(obs-filters_SOURCES
 	async-delay-filter.c
 	crop-filter.c
 	chroma-key-filter.c
+	color-key-filter.c
 	mask-filter.c)
 
 add_library(obs-filters MODULE
