deps-libff: Add ff codec/format utility functions
This adds utility functions for determining which
codecs and formats are supported by loaded FFMpeg
libraries.  This includes validating the codecs that
a particular format supports.

--- a/deps/libff/CMakeLists.txt
+++ b/deps/libff/CMakeLists.txt
@@ -19,6 +19,7 @@ set(libff_HEADERS
 	libff/ff-packet-queue.h
 	libff/ff-threading.h
 	libff/ff-timer.h
+	libff/ff-util.h
 	#
 	libff/ff-demuxer.h
 	#
@@ -30,6 +31,7 @@ set(libff_SOURCES
 	libff/ff-clock.c
 	libff/ff-packet-queue.c
 	libff/ff-timer.c
+	libff/ff-util.c
 	#
 	libff/ff-demuxer.c
 	#
