UI: Add SliderAbsoluteSetStyle class
This class, when used in conjuction with a QSlider control, allows
direct setting of the slider handle position, when clicking in an
area other than the slider handle.
The default QSlider handle behaviour is to step towards
clicked position.
This new QSlider behaviour is useful, for example, in the case
of volume slider where fast and 'precise' volume setting is
desired.
It can be also useful in other QSlider usage cases, for example,
in sources properties.

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -114,7 +114,8 @@ set(obs_SOURCES
 	visibility-item-widget.cpp
 	source-list-widget.cpp
 	crash-report.cpp
-	qt-wrappers.cpp)
+	qt-wrappers.cpp
+	slider-absoluteset-style.cpp)
 
 set(obs_HEADERS
 	obs-app.hpp
@@ -148,7 +149,8 @@ set(obs_HEADERS
 	source-list-widget.hpp
 	qt-display.hpp
 	crash-report.hpp
-	qt-wrappers.hpp)
+	qt-wrappers.hpp
+	slider-absoluteset-style.hpp)
 
 set(obs_UI
 	forms/NameDialog.ui
