UI: Add windows exe icon
Adds an icon to the executable file so the executable no longer shows up
without an icon.

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -41,7 +41,8 @@ include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/libobs")
 
 if(WIN32)
 	set(obs_PLATFORM_SOURCES
-		platform-windows.cpp)
+		platform-windows.cpp
+		obs.rc)
 elseif(APPLE)
 	set(obs_PLATFORM_SOURCES
 		platform-osx.mm)
