--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -15,6 +15,10 @@ elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
 	add_subdirectory(linux-v4l2)
 	add_subdirectory(linux-jack)
 	add_subdirectory(decklink/linux)
+elseif("${CMAKE_SYSTEM_NAME}" MATCHES "FreeBSD")
+	add_subdirectory(linux-capture)
+	add_subdirectory(linux-pulseaudio)
+	add_subdirectory(linux-v4l2)
 endif()
 
 add_subdirectory(image-source)
