linux-jack: Add include directory to cmake
Add the include directories found by cmake to the jack plugin.
This allows for the plugin to compile when the jack headers were
found in a directory that is not normally in the search path of the
compiler (e.g. /usr/local/include)

--- a/plugins/linux-jack/CMakeLists.txt
+++ b/plugins/linux-jack/CMakeLists.txt
@@ -13,7 +13,10 @@ elseif(NOT JACK_FOUND)
 	return()
 endif()
 
-include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/libobs")
+include_directories(
+	SYSTEM "${CMAKE_SOURCE_DIR}/libobs"
+	${JACK_INCLUDE_DIR}
+)
 
 set(linux-jack_SOURCES
 	linux-jack.c
