Only build tests if specified by BUILD_TESTS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,9 @@ if(NOT INSTALLER_RUN)
 	add_subdirectory(libobs)
 	add_subdirectory(obs)
 	add_subdirectory(plugins)
-	add_subdirectory(test)
+	if (BUILD_TESTS)
+		add_subdirectory(test)
+	endif()
 
 	add_subdirectory(cmake/helper_subdir)
 else()
