libobs: Add OBS_UNIX_STRUCTURE config variable
This obsconfig.h variable will be true or false depending on whether the
project is configured with the cmake UNIX_STRUCTURE variable or not.

--- a/libobs/obsconfig.h.in
+++ b/libobs/obsconfig.h.in
@@ -6,3 +6,4 @@
 #define OBS_INSTALL_PREFIX "@OBS_INSTALL_PREFIX@"
 #define OBS_PLUGIN_DESTINATION "@OBS_PLUGIN_DESTINATION@"
 #define OBS_RELATIVE_PREFIX "@OBS_RELATIVE_PREFIX@"
+#define OBS_UNIX_STRUCTURE @OBS_UNIX_STRUCTURE@
