Add CoreAudio AAC encoder

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -5,6 +5,7 @@ if(WIN32)
 	add_subdirectory(win-capture)
 	add_subdirectory(decklink/win)
 elseif(APPLE)
+	add_subdirectory(coreaudio-encoder)
 	add_subdirectory(mac-avcapture)
 	add_subdirectory(mac-capture)
 	add_subdirectory(mac-syphon)
