--- a/plugins/coreaudio-encoder/CMakeLists.txt
+++ b/plugins/coreaudio-encoder/CMakeLists.txt
@@ -1,15 +1,25 @@
 project(coreaudio-encoder)
 
-find_library(COREFOUNDATION CoreFoundation)
-find_library(COREAUDIO CoreAudio)
-find_library(AUDIOTOOLBOX AudioToolbox)
-
-include_directories(${COREFOUNDATION}
-	${COREAUDIO}
-	${AUDIOTOOLBOX})
-
 set(coreaudio-encoder_SOURCES
 	encoder.c)
+
+if (WIN32)
+	set(coreaudio-encoder_HEADERS windows-imports.h)
+	set(coreaudio-encoder_LIBS )
+else()
+	find_library(COREFOUNDATION CoreFoundation)
+	find_library(COREAUDIO CoreAudio)
+	find_library(AUDIOTOOLBOX AudioToolbox)
+	set(coreaudio-encoder_HEADERS )
+	set(coreaudio-encoder_LIBS
+		${COREFOUNDATION}
+		${COREAUDIO}
+		${AUDIOTOOLBOX})
+
+	include_directories(${COREFOUNDATION}
+		${COREAUDIO}
+		${AUDIOTOOLBOX})
+endif()
 
 add_library(coreaudio-encoder MODULE
 	${coreaudio-encoder_SOURCES}
@@ -17,8 +27,6 @@ add_library(coreaudio-encoder MODULE
 
 target_link_libraries(coreaudio-encoder
 	libobs
-	${COREFOUNDATION}
-	${COREAUDIO}
-	${AUDIOTOOLBOX})
+	${coreaudio-encoder_LIBS})
 
 install_obs_plugin_with_data(coreaudio-encoder data)
