UI: Add scene collections
Adds scene collections to the menu bar, which allows you to duplicate,
rename, remove, or add clean new scene collections.

Scene files are now stored in ./obs-studio/basic/scenes directory with
filesystem-safe names.

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -100,6 +100,7 @@ set(obs_SOURCES
 	window-basic-properties.cpp
 	window-basic-main-outputs.cpp
 	window-basic-source-select.cpp
+	window-basic-main-scene-collections.cpp
 	window-license-agreement.cpp
 	window-basic-status-bar.cpp
 	window-basic-adv-audio.cpp
