--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -101,6 +101,7 @@ set(obs_SOURCES
 	window-basic-main-outputs.cpp
 	window-basic-source-select.cpp
 	window-basic-main-scene-collections.cpp
+	window-basic-main-profiles.cpp
 	window-license-agreement.cpp
 	window-basic-status-bar.cpp
 	window-basic-adv-audio.cpp
