obs-filters: Add gain filter
This filter simply modifies the volume of the signal as a convenient way
of modifying the volume before other filters, or amplify the volume
without having to mess with advanced audio properties.

--- a/plugins/obs-filters/CMakeLists.txt
+++ b/plugins/obs-filters/CMakeLists.txt
@@ -9,6 +9,7 @@ set(obs-filters_SOURCES
 	chroma-key-filter.c
 	color-key-filter.c
 	sharpness-filter.c
+	gain-filter.c
 	noise-gate-filter.c
 	mask-filter.c)
 
