--- a/plugins/win-capture/CMakeLists.txt
+++ b/plugins/win-capture/CMakeLists.txt
@@ -3,6 +3,7 @@ project(win-capture)
 set(win-capture_HEADERS
 	obfuscate.h
 	hook-helpers.h
+	inject-library.h
 	cursor-capture.h
 	graphics-hook-info.h
 	window-helpers.h
@@ -11,6 +12,7 @@ set(win-capture_HEADERS
 set(win-capture_SOURCES
 	dc-capture.c
 	obfuscate.c
+	inject-library.c
 	cursor-capture.c
 	game-capture.c
 	window-helpers.c
