UI: Allow QT to be found via cmake variable

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -10,7 +10,11 @@ else()
 	set(FIND_MODE QUIET)
 endif()
 
-if(DEFINED ENV{QTDIR${_lib_suffix}})
+if(DEFINED QTDIR${_lib_suffix})
+	list(APPEND CMAKE_PREFIX_PATH "${QTDIR${_lib_suffix}}")
+elseif(DEFINED QTDIR)
+	list(APPEND CMAKE_PREFIX_PATH "${QTDIR}")
+elseif(DEFINED ENV{QTDIR${_lib_suffix}})
 	list(APPEND CMAKE_PREFIX_PATH "$ENV{QTDIR${_lib_suffix}}")
 elseif(DEFINED ENV{QTDIR})
 	list(APPEND CMAKE_PREFIX_PATH "$ENV{QTDIR}")
