coreaudio-encoder: Fix mingw warnings

--- a/plugins/coreaudio-encoder/CMakeLists.txt
+++ b/plugins/coreaudio-encoder/CMakeLists.txt
@@ -6,6 +6,11 @@ set(coreaudio-encoder_SOURCES
 if (WIN32)
 	set(coreaudio-encoder_HEADERS windows-imports.h)
 	set(coreaudio-encoder_LIBS )
+
+	if (MINGW)
+		set_source_files_properties(${coreaudio-encoder_SOURCES}
+			PROPERTIES COMPILE_FLAGS "-Wno-multichar")
+	endif()
 else()
 	find_library(COREFOUNDATION CoreFoundation)
 	find_library(COREAUDIO CoreAudio)
