mac-vth264: Add Apple H264 encoder
Adds a VideoToolbox based H264 encoder for OSX, which most notably
allows the use of hardware encoding (Quicksync).

NOTES:
- Hardware encoding is handled by Apple itself internally.  The plugin
  itself has little control over many details due to the way that Apple
  designed the VideoToolbox interface.  Generally however, quicksync is
  used if available on the CPU, and quicksync is almost always available
  due to the fact that macs are exclusively Intel.

- The VideoToolbox does not seem to implement CBR, so it won't be
  available.  These encoders are generally not recommended for
  streaming.

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -13,6 +13,7 @@ elseif(APPLE)
 	add_subdirectory(coreaudio-encoder)
 	add_subdirectory(mac-avcapture)
 	add_subdirectory(mac-capture)
+	add_subdirectory(mac-vth264)
 	add_subdirectory(mac-syphon)
 	add_subdirectory(decklink/mac)
 elseif("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
