UI: Add OBS_PROPERTY_FRAME_RATE implementation

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -155,6 +155,7 @@ set(obs_HEADERS
 	window-projector.hpp
 	window-remux.hpp
 	properties-view.hpp
+	properties-view.moc.hpp
 	display-helpers.hpp
 	double-slider.hpp
 	focus-list.hpp
